<?xml version="1.0"?>
<package format="3">
  <name>iiwa_ikfast_kinematics</name>
  <version>0.0.1</version>
  <description>An IKFast solver for the Universal Robots iiwa 7-DOF collaborative robot arm. Uses the descartes_ikfast interface.</description>

  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_srdf</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>libconsole-bridge-dev</depend>
</package>
